Refactor Keycloak integration and audit utilities